# advancedhpc2019

./: README.md
hpc2/Day1/: example.cpp
hpc2/Day1/students/ex1/: CMakeLists.txt  CMakeListsWin10.txt  Exercise.cu  Exercise.hpp  a.out  build.sh  run.sh
hpc2/Day1/students/ex1/include/: chronoGPU.cu  chronoGPU.hpp  rgbcol.hpp
hpc2/Day1/students/ex2/: CMakeLists.txt  Exercise.cu  Exercise.hpp  a.out  build.sh  main.cpp  run.sh
hpc2/Day1/students/ex2/include/: ._chronoCPU.cpp  ._chronoCPU.hpp  ._chronoGPU.cu  ._chronoGPU.hpp  ._common.hpp  ._ppm.cpp  ._ppm.hpp  ._rgbcol.hpp  chronoCPU.cpp  common.hpp  ppm.cpp  ppm.hpp
hpc2/Day2/Student/: CMakeCache.txt  CMakeLists.txt  D_Matrix.cu  D_Matrix.cuh  H_Matrix.cu  H_Matrix.cuh  Makefile  Student.cu  a.out  build.bat  cmake_install.cmake  main.cu  reference.h  run.sh
hpc2/Day2/Student/utils/: chronoCPU.hpp
hpc2/Day3/students/: CMakeLists.txt  Exercise1  Exercise2  build.bat  makefile
hpc2/Day3/students/src/exercise1/: Exercise1.cu  Exercise1.h
hpc2/Day3/students/src/exercise2/: Exercise2.cu  Exercise2.h
hpc2/Day3/students/student/exo1/: student.cu  student.h
hpc2/Day3/students/student/exo2/: student.cu  student.h
hpc2/Day4/Labwork-20191130/LW4-Images/: Collines.ppm  Paris.ppm
hpc2/Day4/Labwork-20191130/LW4-References/: Chateau_equalized.ppm  Chateau_hsv.ppm  Chateau_rgb.ppm  Collines_equalized.ppm  Paris_equalized.ppm
hpc2/Day4/Labwork-20191130/students/: CMakeLists.txt  build.bat  makefile
hpc2/Day4/Labwork-20191130/students/src/exercise1/: Exercise1.cu  Exercise1.h
hpc2/Day4/Labwork-20191130/students/src/exercise2/: Exercise2.cu  Exercise2.h
hpc2/Day4/Labwork-20191130/students/src/exercise3/: Exercise3.cu  Exercise3.h
hpc2/Day4/Labwork-20191130/students/src/exercise4/: Exercise4.cu  Exercise4.h  main.cu
hpc2/Day4/Labwork-20191130/students/student/exo1/: student.cu  student.h
hpc2/Day4/Labwork-20191130/students/student/exo2/: student.cu  student.h
hpc2/Day4/Labwork-20191130/students/student/exo3/: student.cu  student.h
hpc2/Day4/Labwork-20191130/students/student/exo4/: student.cu  student.h
hpc2/Project/students/: Exercise1  Exercise2  Exercise3
hpc2/Project/students/student/exo1/: student.cu
labwork/: CMakeLists.txt  README.md
labwork/report/: Report.0.investigate.tex  Report.1.OpenMP.tex  Report.10.kuwahara.tex  Report.2.Device.Info.tex  Report.3.cuda.tex  Report.4.threads.tex  Report.5.gaussian.blur.tex  Report.6.map.tex  Report.8.scatter.tex
labwork/src/: jpegloader.cu  labwork.cu  timer.cpp
